<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context="com.app.vector.vectores.view.MainActivity"
tools:showIn="@layout/app_bar_main">

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilMagnitud"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txt_magnitud"
        android:hint="@string/magnitud"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:maxLength="6" />
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/tilAngulo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_below="@+id/tilMagnitud">

    <EditText
        android:id="@+id/txt_angulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/angulo"
        android:inputType="numberDecimal" />
</com.google.android.material.textfield.TextInputLayout>

<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/btn_visualizar"
    android:text="@string/view"
    android:layout_below="@+id/btn_agregar"
    android:layout_alignParentStart="true"
    android:gravity="start|center_vertical"
    android:drawableStart="@drawable/ic_menu_view"
    android:paddingStart="60dp"
    android:drawablePadding="20dp"
    android:paddingEnd="50dp"
    android:layout_marginTop="40dp" />
<ImageButton
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:id="@+id/btn_agregar"
    android:src="@drawable/add"
    android:scaleType="fitCenter"
    android:adjustViewBounds="true"
    android:background="?attr/selectableItemBackgroundBorderless"
    android:layout_marginTop="50dp"
    android:layout_below="@+id/tilAngulo"
    android:layout_toStartOf="@+id/btn_editar"
    android:layout_marginEnd="42dp"
    android:contentDescription="Agregar" />

<ImageButton
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:id="@+id/btn_editar"
    android:src="@drawable/edit"
    android:scaleType="fitCenter"
    android:adjustViewBounds="true"
    android:background="?attr/selectableItemBackgroundBorderless"
    android:layout_alignTop="@+id/btn_agregar"
    android:layout_centerHorizontal="true"
    android:contentDescription="Editar" />

<ImageButton
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:id="@+id/btn_calcular"
    android:scaleType="fitCenter"
    android:adjustViewBounds="true"
    android:background="?attr/selectableItemBackgroundBorderless"
    android:layout_above="@+id/btn_visualizar"
    android:layout_toEndOf="@+id/btn_editar"
    android:layout_marginStart="40dp"
    android:contentDescription="Calcular"
    android:src="@drawable/accept" />

</RelativeLayout>